--- a/www/locale/en.json
+++ b/www/locale/en.json
@@ -5,7 +5,7 @@
 	"Reservation By Resource":	"Reservation (By Resource)",
 	"My Reservation":			"My Reservation",
 	"Resource":					"Resource",
-	"Search":					"Search",
+	"Search Resource":			"Search Resource",
 	"No reservation made":		"-- You haven't made any reservation yet --",
 	"Date":						"Date",
 	"Timeslot":					"Timeslot",
