--- a/www/locale/zh_TW.json
+++ b/www/locale/zh_TW.json
@@ -5,7 +5,7 @@
 	"Reservation By Resource":	"預訂 (依資源)",
 	"My Reservation":			"我的預訂",
 	"Resource":					"資源",
-	"Search":					"搜尋",
+	"Search Resource":			"搜尋資源",
 	"No reservation made":		"-- 你沒有任何預訂紀錄 --",
 	"Date":						"日期",
 	"Timeslot":					"時間",
